<resources>

    <string-array name="tags">
        <item>Study</item>
        <item>Game</item>
        <item>Sport</item>
        <item>Relax</item>
    </string-array>

    <string name="app_name">TimerDDLT</string>
    <string name="homepage">Home Page</string>
    <string name="timeline">Timeline</string>
    <string name="schedule">Schedule</string>
    <string name="statistics">Statistics</string>
    <string name="setting">Setting</string>
    <string name="music_setting">Music Setting</string>
    <string name="statistic">Statistics</string>
    <string name="settings">Settings</string>
    <string name="menu_icon">A</string>
    <string name="task">Study</string>
    <string name="description">Description</string>
    <string name="content_description">Study PPL in 15m</string>
    <string name="start_btn">Start</string>
    <string name="name_music">Wedding Moment</string>
    <string name="timeline_hour">20</string>
    <string name="timeline_minute">51</string>
    <string name="content_icon_default">b</string>
    <string name="time_line_title">Study</string>
    <string name="time_line_description">Description: \nStudy PPL in 15m</string>
    <string name="schedule_month">April</string>
    <string name="schedule_year">2022</string>
    <string name="schedule_start_time">18:30</string>
    <string name="schedule_line">-</string>
    <string name="schedule_end_time">20:30</string>
    <string name="schedule_description">Learn English</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home">Home</string>
    <string name="hint_description">Sample: Learn in 15m</string>
    <string name="pause_button">Pause</string>
    <string name="study_tag">Study</string>
</resources>