<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_timeline"
            android:icon="@drawable/ic_timeline"
            android:title="@string/timeline" />
        <item
            android:id="@+id/nav_statistic"
            android:icon="@drawable/ic_statistics"
            android:title="@string/statistic" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_schedule"
            android:title="@string/schedule" />
        <item
            android:id="@+id/nav_alarm_setting"
            android:icon="@drawable/ic_alarm_setting"
            android:title="@string/alarm_setting" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>
</menu>