<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".presentation.MainActivity">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_color">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary_color"
                android:minHeight="?attr/actionBarSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@drawable/menu">

                <TextView
                    android:id="@+id/tv_title_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="?android:attr/actionBarSize"
                    android:gravity="center"
                    android:text="@string/homepage"
                    android:textColor="@color/text_color"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/tv_title_no_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/homepage"
                    android:textColor="@color/text_color"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

            </androidx.appcompat.widget.Toolbar>

            <LinearLayout
                android:id="@+id/ll_music"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="10dp"
                android:gravity="end"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_music_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/name_music"
                    android:textStyle="italic" />

                <ImageView
                    android:id="@+id/iv_music"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:contentDescription="@string/description"
                    android:gravity="center_horizontal"
                    android:padding="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_music_on"
                    android:onClick="playBtnClick"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="75dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar_home">

                <EditText
                    android:id="@+id/et_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/task"
                    android:textColor="@color/black"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/icon_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/menu_icon"
                    android:src="@drawable/ic_edit"
                    app:tint="@color/black" />
            </LinearLayout>

            <FrameLayout
                android:id="@+id/fl_clock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:layout_constraintBottom_toTopOf="@+id/ll_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_tag">

                <ImageView
                    android:id="@+id/iv_clock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shadow"
                    android:contentDescription="@string/menu_icon"
                    android:src="@drawable/circle" />

                <TextView
                    android:id="@+id/tv_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="00:10"
                    android:textColor="@color/button_color"
                    android:textSize="50sp" />

            </FrameLayout>

            <LinearLayout
                android:id="@+id/ll_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fl_clock">

                <TextView
                    android:id="@+id/tv_title_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_description"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:gravity="top|center_horizontal"
                    android:hint="@string/hint_description"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:maxLength="50"
                    android:maxLines="10"
                    android:minLines="1"
                    android:padding="16dp"
                    android:scrollbars="vertical"
                    android:textColor="#9C9C9C"
                    android:textSize="18sp" />
            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:background="@drawable/button_background_start"
                android:gravity="center"
                android:paddingStart="40dp"
                android:paddingTop="5dp"
                android:paddingEnd="40dp"
                android:paddingBottom="5dp"
                android:text="@string/start_btn"
                android:textColor="@color/white"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_description" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:background="@drawable/button_background_pause"
                android:enabled="false"
                android:gravity="center"
                android:paddingStart="40dp"
                android:paddingTop="5dp"
                android:paddingEnd="40dp"
                android:paddingBottom="5dp"
                android:text="@string/pause_button"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_description" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:background="@drawable/button_background_pause"
                android:enabled="false"
                android:gravity="center"
                android:paddingStart="40dp"
                android:paddingTop="5dp"
                android:paddingEnd="40dp"
                android:paddingBottom="5dp"
                android:text="Continue"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_description" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.drawerlayout.widget.DrawerLayout>